styles/index.css
body{
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
    /* color: #ac0469c1; */
    color: #ce558f;
    background-color: rgba(185, 146, 146, 0.064);


}
div ul{
    margin: 0;
    padding: 0;  
}



.nav-bar{
    padding: 0 10px;
    display: flex;
    justify-content: space-between;
    align-items:center;
    background-color: rgba(185, 146, 146, 0.14);
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1000;


}

.nav-bar ul{
    list-style: none;
}
.nav-bar ul li{
    display: inline-block;
    margin-right: 10px;
}

.nav-left .fa-arrow-left-long {
    border: 1px solid gray;
    border-radius: 20px;
    padding: 8px;
    font-size: 15px;
}

.nav-right .fa-icons{
    padding: 0 10px 0 10px;
    font-size: 20px;
}


.main{
    display: flex;
    justify-content: space-between;
    max-height: 100vh; 
}

.preview-area{
   flex:3;
   border-top: 2px solid rgb(185, 146, 146, 0.14);;
   display: flex;
   justify-content: center;
   padding-top: 50px;
   margin-top: 50px;
   /* max-height: calc(100vh - 50px);  */
   min-height: calc(100vh - 101px);
   overflow-y: auto; 
}

.preview-page{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border: 1px solid black; 
    margin-bottom: 50px;  
}

.preview-page div{
    margin: 10px;
    text-align: center;
}


.drag{
    cursor: move;

}

.preview-page :not(:first-child) {
    margin: 10px;
    padding: 5px 20px;
    width: 200px; 
    text-align: center;
    border: 1px solid rgba(14, 13, 13, 0.14);


  }

.select-radio label{
    margin-right: 5px ;
}

.toolbar-area{
    flex: 1;  
    border-left: 1px solid rgb(185, 146, 146, 0.14);
    position: sticky;
    top: 50px;
     /* Adjust according to your fixed nav-bar height */
    overflow-y: auto;
    z-index: 1;
    /* height: calc(100vh - 50px); */
    max-height:calc(100vh - 50px);

}


.toolbar-heading{
   padding: 0 20px 0 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color:#9e0460 ;
   position: sticky;
   top:0px;
   z-index: 1;
}

.toolbar-position{
    top: 50px;

}

.toolbar-heading button{
    padding: 8px 30px 8px 30px;
    border-radius: 20px;
    border: 1px solid rgb(224, 219, 219);
    cursor: pointer;

}

.select-mode{
    display: flex;
    justify-content: space-around;
    margin-right: 10px;
}

.sub-heading{
    margin-left: 20px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 20px;
    color: #9e0460;
}
.toolbar-heading p{
    color: white;

}

.choose-mode button{
    margin: 0px 0px 0 10px;
    border:1px solid #9e0460;
    padding:5px 20px 5px 20px;
    border-radius: 5px;
    cursor: pointer;
    color: #ce558f;
    font-size: 16px;
    text-align: center;
}


.page-type{
    width: calc(100% - 40px);
    margin: 0 20px 0px 20px;
    padding: 5px 40px 5px 40px;
    border-radius: 5px;
}

.range-slider, .select-align{
    margin: 20px;
}

.slider label{
    display: block;
    margin: 10px 0px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 18px;
    color: #9e0460;

    
}

.slider input{
    width: 100%;

}

.select-radio{
    margin-left: 20px;
    margin-right: 10px;
}


.select-radio input[type=radio]{
    accent-color: #ce558f;
    transform: scale(1.1);
}


.color-bar {
    display: flex;
    align-items: center;
    margin-left:20px;
}

input[type="color"]{
    padding: 0;
    border: none;
    margin: 0;
    height: 40px; 


}

.color-box {
    flex: 1;


}
.color-code {
    box-sizing: border-box;
    height: 40px; 
    text-align: center;
    font-family: Arial, sans-serif;
    font-size: 14px;
    color: #ce558f;
    border: 1px solid rgba(185, 146, 146, 0.14);
    flex: 1;
    margin-right:20px;
    display: flex;
    align-items: center;
    justify-content: center;


}

.submit-area{
    margin: 20px 0 20px 20px;
    display: flex;
    justify-content: space-around;

}

.submit-area button{

    padding: 8px 20px 8px 20px;
    border-radius: 20px;
    border: 1px solid rgb(224, 219, 219);
    cursor: pointer;
    background-color: #9e0460;
    color: white;

} 

.rotate-element{
    margin: 20px 0 0 20px;

}

.rotate-element p{
    display: inline-block;
    margin-left: 10px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 18px;
    color: #9e0460;

}

.rotate-element button{
    padding: 5px;
    color: #9e0460;
    border: 1px solid #ce558f;
    cursor: pointer;

}


#page-type-slider,#qrSizeSlider{
display: none;
}



.tooltip {
    position: absolute;
    background-color: black;
    color: white;
    padding: 5px;
    border-radius: 5px;
    font-size: 12px;
    display: none;
}

.slider {
    position: relative;
}

.slider:hover .tooltip {
    display: block;
    top: 10px;
    
}

.mode-btn.clicked{
    background-color: #9e0460;
    color: rgb(224, 219, 219);
}

.design-tools{
    display: none;
}

.rotate {
    transform: rotate(45deg); 
    transition: transform 0.5s ease;
}

.rotate-0 {
    transform: rotate(0deg);
}

.rotate-90 {
    transform: rotate(90deg);
}

.rotate-180 {
    transform: rotate(180deg);
}

.rotate-270 {
    transform: rotate(270deg);
}



/* Custom scrollbar */
::-webkit-scrollbar {
    width: 5px; 
}

/* Track */
::-webkit-scrollbar-track {
    background:rgba(185, 146, 146, 0.064);

}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #ce558f; 
    border-radius: 50px;

}

::-webkit-scrollbar-thumb:hover {
    background: #9e0460; 
}

